--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "sanitize-filename": "^1.6.3"
   }
 }
