--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "node-fetch": "^2.6.7",
-    "sanitize-filename": "^1.6.3"
+    "sanitize-filename": "^1.6.3",
+    "express-session": "^1.17.3"
   }
 }
