--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^7.0.3",
     "node-fetch": "^2.6.7",
     "sanitize-filename": "^1.6.3",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "nanoid": "^4.0.0"
   }
 }
