--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "start": "node app.js"
   },
-  "dependencies": {
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.3",
-    "node-fetch": "^2.6.7",
-    "sanitize-filename": "^1.6.3",
-    "express-session": "^1.17.3",
-    "nanoid": "^4.0.0"
-  }
+"dependencies": {
+  "axios": "^1.6.0",
+  "dotenv": "^16.0.0",
+  "ejs": "^3.1.8",
+  "express": "^4.18.2",
+  "express-session": "^1.17.3",
+  "mongoose": "^7.0.3",
+  "nanoid": "^4.0.0",
+  "node-fetch": "^2.6.7",
+  "sanitize-filename": "^1.6.3"
+}
 }
