--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "ttdownloader",
+  "name": "tikssave",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
-"dependencies": {
-  "axios": "^1.6.0",
-  "dotenv": "^16.0.0",
-  "ejs": "^3.1.8",
-  "express": "^4.18.2",
-  "express-session": "^1.17.3",
-  "mongoose": "^7.0.3",
-  "nanoid": "^4.0.0",
-  "node-fetch": "^2.6.7",
-  "sanitize-filename": "^1.6.3"
-}
+  "dependencies": {
+    "axios": "^1.6.0",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.0.3",
+    "nanoid": "^4.0.0",
+    "node-fetch": "^2.6.7",
+    "sanitize-filename": "^1.6.3",
+    "passport": "^0.6.0",
+    "passport-discord": "^0.1.4"
+  }
 }
