--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^2.6.7",
     "sanitize-filename": "^1.6.3",
     "passport": "^0.6.0",
+     "basic-auth": "^2.0.0",
     "passport-discord": "^0.1.4"
   }
 }
